@@ -108,7 +108,8 @@ Library MASS
 - profile() and confint() methods for polr().
 - glm.convert() was not setting the `offset' component that R's glm objects 
   have.
-
+- sammon() now checks for duplicates in the initial configuration.
+- isoMDS() and sammon() workaround dropping of names.dist in 2.1.0
 
 
 Library class
