@@ -86,4 +86,5 @@ This file documents software changes since the third edition.
 - profile() and confint() methods for polr().
 - glm.convert() was not setting the `offset' component that R's glm objects 
   have.
-- profile() and confint() methods for polr().
+- sammon() now checks for duplicates in the initial configuration.
+- isoMDS() and sammon() workaround dropping of names.dist in 2.1.0
